# tree-sitter-vcl

./: CMakeLists.txt  Cargo.toml  LICENSE  Makefile  Package.swift  README.md  binding.gyp  example.vcl  go.mod  grammar.js  package.json  pyproject.toml  renovate.json  setup.py  tree-sitter.json
.github/workflows/: ci.yml
bindings/c/: tree-sitter-vcl.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_tree_sitter_vcl/: __init__.py
bindings/python/tree_sitter_vcl/: binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterTreeSitterVcl/: tree_sitter_vcl.h
bindings/swift/TreeSitterTreeSitterVclTests/: TreeSitterTreeSitterVclTests.swift
bindings/swift/TreeSitterVclTests/: TreeSitterVclTests.swift
queries/: folds.scm  highlights.scm  indents.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: advanced.txt  basics.txt  expressions.txt  subroutines.txt
